# lvgl_ui_generator_v2

./: .gitignore  .gitmodules  README.md  lv_conf.h  pyproject.toml  tasks.py
designs/: chatgpt_test1.json  chatgpt_test2.json  chatgpt_test3.json  emergency_call.json  example.json  example2.json  media_playback_example.json  smart_home.json  smart_home2.json  smart_watch.json  thermostat.json  ui_attempt1.json  widgets_showcase.json
docs/: search.js  src.html
docs/src/: bin_to_jpg_conversion.html  cli.html  design_parser.html  global_definitions.html  main.html  mock.html  random_ui.html  screenshot.html  screenshot_v2.html  ui.html  widget.html  yolo.html
docs/src/mock/: display.html  jpeg.html  lvgl.html
src/: bin_to_jpg_conversion.py  cli.py  design_parser.py  global_definitions.py  jpg_conversion.py  main.py  random_ui.py  screenshot.py  screenshot_v2.py  ui.py  widget.py  yolo.py
src/mock/: __init__.py  display.py  jpeg.py  lvgl.py
stubs/: lvgl.pyi
